# nehex-core

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  launch.sh  launch.txt  requirements.in  requirements.txt
.cargo/: config.toml
.github/workflows/: publish-docker.yml
app/: __init__.py  main.py
app/api/: router.py
app/core/: admin_security.py  config.py  database.py  simple_cache.py
app/models/: __init__.py  album.py  article.py  comment.py  daily.py  friend.py  friend_apply.py  mail_log.py  media_folder.py  media_image.py  project.py  setting.py  singlepage.py
app/nehex-admin/: env.d.ts  index.html  package-lock.json  package.json  vite.config.mts
app/schemas/: admin.py  album.py  article.py  comment.py  daily.py  friend.py  page.py  project.py  setting.py
app/services/: admin_service.py  albums_service.py  articles_service.py  comments_service.py  dailies_service.py  friends_service.py  install_service.py  mail_service.py  (+5 more)
backend-rust/: Cargo.toml  README.md
backend-rust/src/: cache.rs  config.rs  error.rs  log_buffer.rs  main.rs  startup.rs  state.rs  storage_local.rs
backend-rust/src/defaults/: rei_theme.json
backend-rust/src/routes/: admin_ai.rs  admin_api.rs  admin_auth.rs  admin_backup.rs  admin_comments.rs  admin_content.rs  admin_dashboard.rs  admin_developer.rs  admin_friends.rs  admin_mail.rs  admin_media.rs  admin_settings.rs  admin_static.rs  comment_targets.rs  health.rs  mod.rs  public_api.rs  storage_files.rs  sync_api.rs  ws_content_updates.rs  ws_online.rs
(+110 files in other folders)
