[package]
name = "backend-rust"
version = "1.2.9"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["http2", "ws", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
http = "1.3"
mime_guess = "2.0"
once_cell = "1.21"
regex = "1.12"
rand = "0.8"
redis = { version = "0.27", default-features = false, features = ["tokio-comp"] }
aws-credential-types = "1.2"
aws-sdk-s3 = { version = "1.56", default-features = false, features = ["rt-tokio", "rustls", "behavior-version-latest"] }
flate2 = "1.1"
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "derive"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5"
